Add: commit statement

--- a/slides-addons.ipynb
+++ b/slides-addons.ipynb
@@ -19,7 +19,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -35,7 +35,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -44,20 +44,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "sqlite3.Connection"
-      ]
-     },
-     "execution_count": 3,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "type(connection)"
    ]
@@ -71,21 +60,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Help on method_descriptor:\n",
-      "\n",
-      "execute(...)\n",
-      "    Executes a SQL statement. Non-standard.\n",
-      "\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "help(sqlite3.Connection.execute)"
    ]
@@ -99,7 +76,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -108,61 +85,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "sqlite3.Cursor"
-      ]
-     },
-     "execution_count": 6,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "type(cursor)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Help on method_descriptor:\n",
-      "\n",
-      "execute(...)\n",
-      "    Executes a SQL statement.\n",
-      "\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "help(sqlite3.Cursor.execute)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "<sqlite3.Cursor at 0x7f305d5eb8f0>"
-      ]
-     },
-     "execution_count": 8,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "cursor.execute('SELECT * FROM Users')"
    ]
@@ -178,24 +121,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "('Charles', 'csev@umich.edu')\n",
-      "('Colleen', 'cvl@umich.edu')\n",
-      "('Sally', 'a1@umich.edu')\n",
-      "('Kristen', 'kf@umich.edu')\n",
-      "('Richard Brinkman', 'r.brinkman@saxion.nl')\n",
-      "('Brinkman', None)\n",
-      "('Brinkman', None)\n",
-      "('Brinkman', None)\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "for row in cursor:\n",
     "    print(row)"
@@ -212,77 +140,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Help on class Cursor in module sqlite3:\n",
-      "\n",
-      "class Cursor(builtins.object)\n",
-      " |  SQLite database cursor class.\n",
-      " |  \n",
-      " |  Methods defined here:\n",
-      " |  \n",
-      " |  __init__(self, /, *args, **kwargs)\n",
-      " |      Initialize self.  See help(type(self)) for accurate signature.\n",
-      " |  \n",
-      " |  __iter__(self, /)\n",
-      " |      Implement iter(self).\n",
-      " |  \n",
-      " |  __new__(*args, **kwargs) from builtins.type\n",
-      " |      Create and return a new object.  See help(type) for accurate signature.\n",
-      " |  \n",
-      " |  __next__(self, /)\n",
-      " |      Implement next(self).\n",
-      " |  \n",
-      " |  close(...)\n",
-      " |      Closes the cursor.\n",
-      " |  \n",
-      " |  execute(...)\n",
-      " |      Executes a SQL statement.\n",
-      " |  \n",
-      " |  executemany(...)\n",
-      " |      Repeatedly executes a SQL statement.\n",
-      " |  \n",
-      " |  executescript(...)\n",
-      " |      Executes a multiple SQL statements at once. Non-standard.\n",
-      " |  \n",
-      " |  fetchall(...)\n",
-      " |      Fetches all rows from the resultset.\n",
-      " |  \n",
-      " |  fetchmany(...)\n",
-      " |      Fetches several rows from the resultset.\n",
-      " |  \n",
-      " |  fetchone(...)\n",
-      " |      Fetches one row from the resultset.\n",
-      " |  \n",
-      " |  setinputsizes(...)\n",
-      " |      Required by DB-API. Does nothing in pysqlite.\n",
-      " |  \n",
-      " |  setoutputsize(...)\n",
-      " |      Required by DB-API. Does nothing in pysqlite.\n",
-      " |  \n",
-      " |  ----------------------------------------------------------------------\n",
-      " |  Data descriptors defined here:\n",
-      " |  \n",
-      " |  arraysize\n",
-      " |  \n",
-      " |  connection\n",
-      " |  \n",
-      " |  description\n",
-      " |  \n",
-      " |  lastrowid\n",
-      " |  \n",
-      " |  row_factory\n",
-      " |  \n",
-      " |  rowcount\n",
-      "\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "help(sqlite3.Cursor)"
    ]
@@ -296,27 +156,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "[('Charles', 'csev@umich.edu'),\n",
-       " ('Colleen', 'cvl@umich.edu'),\n",
-       " ('Sally', 'a1@umich.edu'),\n",
-       " ('Kristen', 'kf@umich.edu'),\n",
-       " ('Richard Brinkman', 'r.brinkman@saxion.nl'),\n",
-       " ('Brinkman', None),\n",
-       " ('Brinkman', None),\n",
-       " ('Brinkman', None)]"
-      ]
-     },
-     "execution_count": 11,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "cursor.execute('SELECT * FROM Users')\n",
     "cursor.fetchall()"
@@ -331,20 +173,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "('Charles', 'csev@umich.edu')"
-      ]
-     },
-     "execution_count": 12,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "cursor.execute('SELECT * FROM Users')\n",
     "cursor.fetchone()"
@@ -352,20 +183,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "('Colleen', 'cvl@umich.edu')"
-      ]
-     },
-     "execution_count": 13,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "cursor.fetchone()"
    ]
@@ -379,25 +199,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "[('Sally', 'a1@umich.edu'),\n",
-       " ('Kristen', 'kf@umich.edu'),\n",
-       " ('Richard Brinkman', 'r.brinkman@saxion.nl'),\n",
-       " ('Brinkman', None),\n",
-       " ('Brinkman', None),\n",
-       " ('Brinkman', None)]"
-      ]
-     },
-     "execution_count": 14,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "cursor.fetchall()"
    ]
@@ -413,37 +217,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "[]"
-      ]
-     },
-     "execution_count": 15,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "cursor.fetchall()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "None\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "print(cursor.fetchone())"
    ]
@@ -588,6 +373,15 @@
     "## Commit\n",
     "\n",
     "Alles wat je met een `connectie` object doet wordt niet direct weggeschreven naar schijf. Het bestand `example.db` is dus nog altijd niet veranderd dat gebeurt pas na het volgende commando:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "connection.commit()"
    ]
   },
   {
