--- a/slides-addons.ipynb
+++ b/slides-addons.ipynb
@@ -2,8 +2,13 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
    "source": [
+    "\n",
     "# Hoofdstuk 15 - Databases\n",
     "\n",
     "In de slides behorende bij hoofdstuk 15 wordt uitgebreid ingegaan op SQL en op database normalisatie. Als het goed is weten jullie dat allemaal nog van het vak Computer Forensics & Gegevensbeheer wat vorig jaar gegeven is.\n",
@@ -12,8 +17,17 @@
     "\n",
     "Voor iedere database is er wel een Python module te vinden om hier mee te connecten. Deze zullen allemaal heel erg op elkaar lijken. In deze notebook zullen we gebruik maken van de bij jullie reeds bekende SQlite.\n",
     "\n",
-    "Allereerst moeten we de sqlite3 module importeren in ons script. Er is verder geen noodzaak om hiervoor iets te moeten installeren aangezien elke Python interpreter reeds wordt meegeleverd met deze module.\n",
-    "\n",
+    "Allereerst moeten we de sqlite3 module importeren in ons script. Er is verder geen noodzaak om hiervoor iets te moeten installeren aangezien elke Python interpreter reeds wordt meegeleverd met deze module."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
+   "source": [
     "## Initialisatie"
    ]
   },
@@ -53,7 +67,11 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
    "source": [
     "## Bevragen van een database connectie"
    ]
@@ -104,7 +122,11 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "slideshow": {
+     "slide_type": "subslide"
+    }
+   },
    "outputs": [],
    "source": [
     "cursor.execute('SELECT * FROM Users')"
@@ -112,7 +134,11 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "slideshow": {
+     "slide_type": "-"
+    }
+   },
    "source": [
     "Je verwacht op dit punt waarschijnlijk de inhoud van de tabel te zien, zoals je bij de sqlite command line tool gewend was.\n",
     "\n",
@@ -141,7 +167,11 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "slideshow": {
+     "slide_type": "subslide"
+    }
+   },
    "outputs": [],
    "source": [
     "help(sqlite3.Cursor)"
@@ -149,7 +179,11 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "slideshow": {
+     "slide_type": "subslide"
+    }
+   },
    "source": [
     "Feitelijk wordt bij gebruik van een `for` lus dus eerst de `fetchall()` functie aangeroepen:"
    ]
@@ -166,7 +200,11 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "slideshow": {
+     "slide_type": "subslide"
+    }
+   },
    "source": [
     "Je kunt ook één voor één de rows opvragen:"
    ]
@@ -208,7 +246,11 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "slideshow": {
+     "slide_type": "subslide"
+    }
+   },
    "source": [
     "De elementen van een cursor zijn dus maar eenmalig op te vragen. Heb je ze dus vaker nodig in je Python script dan zul je de lijst in een variabele moeten opslaan.\n",
     "\n",
@@ -235,7 +277,11 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
    "source": [
     "## INSERT queries\n",
     "\n",
@@ -253,7 +299,32 @@
   },
   {
    "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "fragment"
+    }
+   },
+   "source": [
+    "Dat kunnen we checken met:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "metadata": {},
+   "outputs": [],
+   "source": [
+    "cursor.execute('SELECT * FROM Users')\n",
+    "cursor.fetchall()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "subslide"
+    }
+   },
    "source": [
     "### SQL injection attack\n",
     "\n",
@@ -263,8 +334,17 @@
     "INSERT INTO Users(name, email) VALUES ('Richard Brinkman', 'r.brinkman@saxion.nl')\n",
     "```\n",
     "\n",
-    "Als de data die je wilt inserten namelijk afkomstig is van een onbetrouwbare bron (bijvoorbeeld hacker die een formuliertje invoert op een website), wil je deze niet direct in de query zetten.\n",
-    "\n",
+    "Als de data die je wilt inserten namelijk afkomstig is van een onbetrouwbare bron (bijvoorbeeld hacker die een formuliertje invoert op een website), wil je deze niet direct in de query zetten."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "subslide"
+    }
+   },
+   "source": [
     "Beschouw deze gevaarlijke code:"
    ]
   },
@@ -274,14 +354,39 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "name = input('Wat is uw naam')\n",
+    "name = input('Wat is uw naam: ')\n",
     "sql = \"INSERT INTO Users(name) VALUES ('\" + name + \"');\"\n",
     "cursor.executescript(sql)"
    ]
   },
   {
    "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "fragment"
+    }
+   },
+   "source": [
+    "Even checken met:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "metadata": {},
+   "outputs": [],
+   "source": [
+    "cursor.execute('SELECT * FROM Users')\n",
+    "cursor.fetchall()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "subslide"
+    }
+   },
    "source": [
     "Zolang je \"normale\" data opgeeft gaat het weliswaar goed, maar wat als de gebruiker iets intypt als:\n",
     "\n",
@@ -301,15 +406,34 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "name = input('Wat is uw naam')\n",
+    "name = input('Wat is uw naam: ')\n",
     "sql = \"INSERT INTO Users(name) VALUES ('\" + name + \"');\"\n",
-    "print(sql)\n",
-    "cursor.executescript(sql)"
+    "cursor.executescript(sql)\n",
+    "print(sql)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "slideshow": {
+     "slide_type": "fragment"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "# Ted is verdwenen !!!\n",
+    "cursor.execute('SELECT * FROM Users')\n",
+    "cursor.fetchall()"
    ]
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "slideshow": {
+     "slide_type": "fragment"
+    }
+   },
    "source": [
     "Gebruik daarom *altijd* placeholders als een deel van je query komt van een variabele."
    ]
@@ -317,7 +441,11 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "slideshow": {
+     "slide_type": "subslide"
+    }
+   },
    "outputs": [],
    "source": [
     "name = input('Wat is uw naam')\n",
@@ -336,7 +464,11 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
    "source": [
     "## Meerdere regels tegelijk inserten\n",
     "\n",
@@ -368,7 +500,11 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
    "source": [
     "## Commit\n",
     "\n",
@@ -393,6 +529,7 @@
   }
  ],
  "metadata": {
+  "celltoolbar": "Slideshow",
   "kernelspec": {
    "display_name": "Python 3",
    "language": "python",
@@ -409,6 +546,9 @@
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
    "version": "3.6.9"
+  },
+  "rise": {
+   "autolaunch": true
   }
  },
  "nbformat": 4,
