Add: slide about RISE usage

--- a/slides-addons.ipynb
+++ b/slides-addons.ipynb
@@ -13,11 +13,7 @@
     "\n",
     "In de slides behorende bij hoofdstuk 15 wordt uitgebreid ingegaan op SQL en op database normalisatie. Als het goed is weten jullie dat allemaal nog van het vak Computer Forensics & Gegevensbeheer wat vorig jaar gegeven is.\n",
     "\n",
-    "Helaas staan in de slides geen Python voorbeelden hoe je SQL queries vanuit je eigen script kunt aanroepen.\n",
-    "\n",
-    "Voor iedere database is er wel een Python module te vinden om hier mee te connecten. Deze zullen allemaal heel erg op elkaar lijken. In deze notebook zullen we gebruik maken van de bij jullie reeds bekende SQlite.\n",
-    "\n",
-    "Allereerst moeten we de sqlite3 module importeren in ons script. Er is verder geen noodzaak om hiervoor iets te moeten installeren aangezien elke Python interpreter reeds wordt meegeleverd met deze module."
+    "Helaas staan in de slides geen Python voorbeelden hoe je SQL queries vanuit je eigen script kunt aanroepen."
    ]
   },
   {
@@ -28,7 +24,29 @@
     }
    },
    "source": [
-    "## Initialisatie"
+    "# Gebruik slides\n",
+    "\n",
+    "Als je deze slides thuis gebruik je deze knop op Blackboard: [![Binder](https://mybinder.org/badge_logo.svg)](https://mybinder.org/v2/gh/richardbrinkman/pythonlearn15/master?filepath=slides-addons.ipynb)\n",
+    "\n",
+    "* met de spatiebalk ga je naar de volgende slide\n",
+    "* met shift+spatiebalk ga je naar de vorige slide\n",
+    "* code blokken kun je zelf aanpassen\n",
+    "* code blok kun je uitvoeren met Shift-Enter"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
+   "source": [
+    "## Initialisatie\n",
+    "\n",
+    "Voor iedere database is er wel een Python module te vinden om hier mee te connecten. Deze zullen allemaal heel erg op elkaar lijken. In deze notebook zullen we gebruik maken van de bij jullie reeds bekende SQlite.\n",
+    "\n",
+    "Allereerst moeten we de sqlite3 module importeren in ons script. Er is verder geen noodzaak om hiervoor iets te moeten installeren aangezien elke Python interpreter reeds wordt meegeleverd met deze module."
    ]
   },
   {
@@ -42,7 +60,11 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "slideshow": {
+     "slide_type": "subslide"
+    }
+   },
    "source": [
     "Vervolgens moet een database bestand worden geopend. Vergelijk dit met het openen van een tekstbestand met de `open()` functie. We gebruiken hiervoor de `sqlite3.connect()` functie voor."
    ]
