Fix: LaTeX / SVG

--- a/slides-addons.ipynb
+++ b/slides-addons.ipynb
@@ -26,7 +26,7 @@
    "source": [
     "# Gebruik slides\n",
     "\n",
-    "Als je deze slides thuis gebruik je deze knop op Blackboard: [![Binder](https://mybinder.org/badge_logo.svg)](https://mybinder.org/v2/gh/richardbrinkman/pythonlearn15/master?filepath=slides-addons.ipynb)\n",
+    "Als je deze slides thuis gebruik je deze knop op Blackboard: [![Binder](badge_logo.png)](https://mybinder.org/v2/gh/richardbrinkman/pythonlearn15/master?filepath=slides-addons.ipynb)\n",
     "\n",
     "* met de spatiebalk ga je naar de volgende slide\n",
     "* met shift+spatiebalk ga je naar de vorige slide\n",
