--- a/slides-addons.ipynb
+++ b/slides-addons.ipynb
@@ -528,9 +528,35 @@
     }
    },
    "source": [
-    "## Commit\n",
+    "## Meerdere cursors\n",
     "\n",
-    "Alles wat je met een `connectie` object doet wordt niet direct weggeschreven naar schijf. Het bestand `example.db` is dus nog altijd niet veranderd dat gebeurt pas na het volgende commando:"
+    "Soms zal het noodzakelijk zijn om meerdere queries parallel naast elkaar te draaien. Je kunt hiervoor meerdere cursors gebruiken"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# convert all email addresses to lower case\n",
+    "select_cursor = connection.cursor()\n",
+    "update_cursor = connection.cursor()\n",
+    "for email, in select_cursor.execute('SELECT email FROM Users'):\n",
+    "    update_cursor.execute('UPDATE Users SET email = ? WHERE email = ?', (email.lower(), email))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
+   "source": [
+    "## Commit / Rollback\n",
+    "\n",
+    "Alles wat je met een `connectie` object doet wordt niet direct weggeschreven naar schijf. Het bestand `example.db` is dus nog altijd niet veranderd; dat gebeurt pas na het volgende commando:"
    ]
   },
   {
@@ -540,6 +566,38 @@
    "outputs": [],
    "source": [
     "connection.commit()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Als je alle queries in de transactie ongedaan maken kun je ook altijd\n",
+    "\n",
+    "```python\n",
+    "connection.rollback()\n",
+    "```\n",
+    "\n",
+    "draaien."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
+   "source": [
+    "# Recap\n",
+    "\n",
+    "* open eenmalig een database connectie met `connection = sqlite3.connect('bestandsnaam.db')`\n",
+    "* maak een cursor object aan met `cursor = connection.cursor()`\n",
+    "* gebruik één van de `execute...()` functies: `cursor.execute('SELECT ...')`\n",
+    "* gebruik één van de `fetch...()` functies om de data te downloaden: `cursor.fetchAll()` of gebruik de cursor in een `for row in cursor:` loopje\n",
+    "* `connection.commit()` om je data naar schijf weg te schrijven\n",
+    "\n",
+    "* lees de slides van het boek door als herhaling van het vak Computer Forensics & Gegevensbeheer."
    ]
   },
   {
