Fix: fetchone vs fetchall

--- a/slides-addons.ipynb
+++ b/slides-addons.ipynb
@@ -190,6 +190,7 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
+    "scrolled": true,
     "slideshow": {
      "slide_type": "subslide"
     }
@@ -207,7 +208,7 @@
     }
    },
    "source": [
-    "Feitelijk wordt bij gebruik van een `for` lus dus eerst de `fetchall()` functie aangeroepen:"
+    "In plaats van de `for` lus kan hetzelfde effect verkregen worden d.m.v. de `fetchall()` functie."
    ]
   },
   {
@@ -295,6 +296,19 @@
    "outputs": [],
    "source": [
     "print(cursor.fetchone())"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "subslide"
+    }
+   },
+   "source": [
+    "# `fetchone()` / `for` versus `fetchall()`\n",
+    "\n",
+    "Bij zeer grote datasets is het verstandiger om `fetchone()` of een `for` lus te gebruiken aangezien bij `fetchall()` alles in één keer wordt gedownload en dus in het geheugen van de client moet passen."
    ]
   },
   {
