Fix: layout bij 1024x768 beamer

--- a/slides-addons.ipynb
+++ b/slides-addons.ipynb
@@ -111,7 +111,18 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Zoals je ziet is de `execute()` functie niet standaard voor een typische database connectie. Veruit de meeste database modules gebruiken een `cursor` object."
+    "Zoals je ziet is de `execute()` functie niet standaard voor een typische database connectie. "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "subslide"
+    }
+   },
+   "source": [
+    "Veruit de meeste database modules gebruiken een `cursor` object."
    ]
   },
   {
@@ -162,8 +173,17 @@
     }
    },
    "source": [
-    "Je verwacht op dit punt waarschijnlijk de inhoud van de tabel te zien, zoals je bij de sqlite command line tool gewend was.\n",
-    "\n",
+    "Je verwacht op dit punt waarschijnlijk de inhoud van de tabel te zien, zoals je bij de sqlite command line tool gewend was."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "subslide"
+    }
+   },
+   "source": [
     "De SQL query is weliswaar uitgevoerd, maar de uitkomst moet nog wel worden uitgelezen in Python, bijvoorbeeld door een `for` lusje."
    ]
   },
@@ -181,8 +201,17 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Zoals je ziet gedraagt een `cursor` object zich (binnen een `for` lus) als een lijst van `tuple`'s.\n",
-    "\n",
+    "Zoals je ziet gedraagt een `cursor` object zich (binnen een `for` lus) als een lijst van `tuple`'s."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "subslide"
+    }
+   },
+   "source": [
     "Maar een `cursor` object kan veel meer:"
    ]
   },
@@ -192,7 +221,7 @@
    "metadata": {
     "scrolled": true,
     "slideshow": {
-     "slide_type": "subslide"
+     "slide_type": "-"
     }
    },
    "outputs": [],
@@ -330,14 +359,15 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "cursor.execute('INSERT INTO Users(name, email) VALUES (?, ?)', ('Richard Brinkman', 'r.brinkman@saxion.nl'))"
+    "cursor.execute('INSERT INTO Users(name, email) VALUES(?, ?)', \n",
+    "               ('Richard Brinkman', 'r.brinkman@saxion.nl'))"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {
     "slideshow": {
-     "slide_type": "fragment"
+     "slide_type": "subslide"
     }
    },
    "source": [
@@ -347,7 +377,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [],
    "source": [
     "cursor.execute('SELECT * FROM Users')\n",
@@ -367,7 +399,9 @@
     "Zoals je ziet gebruiken we placeholders i.p.v. direct een SQL query als\n",
     "\n",
     "```sql\n",
-    "INSERT INTO Users(name, email) VALUES ('Richard Brinkman', 'r.brinkman@saxion.nl')\n",
+    "INSERT INTO Users(name, email) \n",
+    "VALUES ('Richard Brinkman', \n",
+    "        'r.brinkman@saxion.nl')\n",
     "```\n",
     "\n",
     "Als de data die je wilt inserten namelijk afkomstig is van een onbetrouwbare bron (bijvoorbeeld hacker die een formuliertje invoert op een website), wil je deze niet direct in de query zetten."
@@ -399,7 +433,7 @@
    "cell_type": "markdown",
    "metadata": {
     "slideshow": {
-     "slide_type": "fragment"
+     "slide_type": "subslide"
     }
    },
    "source": [
@@ -432,14 +466,21 @@
     "\n",
     "Je zou dan 2 queries uitvoeren namelijk:\n",
     "```sql\n",
-    "INSERT INTO Users(name) VALUES ('Brinkman'); DELETE FROM Users WHERE name = 'Ted' AND ('' == '')\n",
+    "INSERT INTO Users(name) \n",
+    "            VALUES ('Brinkman');\n",
+    "DELETE FROM Users WHERE name = 'Ted' AND \n",
+    "                        ('' == '')\n",
     "```"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "slideshow": {
+     "slide_type": "subslide"
+    }
+   },
    "outputs": [],
    "source": [
     "name = input('Wat is uw naam: ')\n",
@@ -543,13 +584,29 @@
     "    ('Brinkman', 'r.brinkman@saxion.nl'),\n",
     "    ('van Tuinen', 'm.vantuinen@saxion.nl')\n",
     "]\n",
-    "cursor.executemany('INSERT INTO Users(name, email) VALUES (?, ?)', personen)"
+    "cursor.executemany('INSERT INTO Users(name, email) VALUES (?, ?)', \n",
+    "                   personen)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "subslide"
+    }
+   },
+   "source": [
+    "Even checken:"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "slideshow": {
+     "slide_type": "-"
+    }
+   },
    "outputs": [],
    "source": [
     "cursor.execute('SELECT * FROM Users')\n",
@@ -576,10 +633,13 @@
    "outputs": [],
    "source": [
     "# convert all email addresses to lower case\n",
-    "select_cursor = connection.cursor()\n",
-    "update_cursor = connection.cursor()\n",
-    "for email, in select_cursor.execute('SELECT email FROM Users'):\n",
-    "    update_cursor.execute('UPDATE Users SET email = ? WHERE email = ?', (email.lower(), email))"
+    "cursor1 = connection.cursor()\n",
+    "cursor2 = connection.cursor()\n",
+    "for email, in cursor1.execute('''SELECT email FROM Users \n",
+    "                                 WHERE email IS NOT NULL'''):\n",
+    "    cursor2.execute('''UPDATE Users SET email = ? \n",
+    "                       WHERE email = ?''', \n",
+    "                    (email.lower(), email))"
    ]
   },
   {
@@ -629,19 +689,22 @@
     "\n",
     "* open eenmalig een database connectie met `connection = sqlite3.connect('bestandsnaam.db')`\n",
     "* maak een cursor object aan met `cursor = connection.cursor()`\n",
-    "* gebruik één van de `execute...()` functies: `cursor.execute('SELECT ...')`\n",
+    "* gebruik één van de `execute...()` functies: `cursor.execute('SELECT ...')`"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "subslide"
+    }
+   },
+   "source": [
     "* gebruik één van de `fetch...()` functies om de data te downloaden: `cursor.fetchAll()` of gebruik de cursor in een `for row in cursor:` loopje\n",
     "* `connection.commit()` om je data naar schijf weg te schrijven\n",
     "\n",
     "* lees de slides van het boek door als herhaling van het vak Computer Forensics & Gegevensbeheer."
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
