--- a/slides-addons.ipynb
+++ b/slides-addons.ipynb
@@ -109,13 +109,6 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Zoals je ziet is de `execute()` functie niet standaard voor een typische database connectie. "
-   ]
-  },
-  {
-   "cell_type": "markdown",
    "metadata": {
     "slideshow": {
      "slide_type": "subslide"
@@ -466,7 +459,7 @@
     "INSERT INTO Users(name) \n",
     "            VALUES ('Brinkman');\n",
     "DELETE FROM Users WHERE name = 'Ted' AND \n",
-    "                        ('' == '')\n",
+    "                        ('' == '');\n",
     "```"
    ]
   },
@@ -556,6 +549,28 @@
    "source": [
     "cursor.execute(\"SELECT * FROM Users\")\n",
     "cursor.fetchall()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "subslide"
+    }
+   },
+   "source": [
+    "## Named placeholders\n",
+    "Naast de `?` placeholders kun je ook named placeholders gebruiken:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "data = {\"name\": \"Jan\", \"email\": \"j.klaassen@gmail.com\"}\n",
+    "cursor.execute(\"INSERT INTO Users(name, email) VALUES(:name, :email)\", data)"
    ]
   },
   {
@@ -707,7 +722,7 @@
  "metadata": {
   "celltoolbar": "Slideshow",
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -721,7 +736,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.10"
+   "version": "3.10.12"
   },
   "rise": {
    "autolaunch": true
